# atmos

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  install-desktop.sh  install-local-web-runtime.sh  install.sh  justfile  package.json
apps/api/: .env.example  AGENT.md  AGENTS.md  Cargo.toml  build.rs
apps/api/macos/: Sidecar-Info.plist
apps/api/src/: app_state.rs  error.rs  main.rs
apps/api/src/api/: dto.rs  mod.rs
apps/api/src/api/agent/: handlers.rs  mod.rs
apps/api/src/api/canvas/: agent.rs  handlers.rs  mod.rs
apps/api/src/api/hooks/: mod.rs
apps/api/src/api/project/: handlers.rs  mod.rs
apps/api/src/api/review/: handlers.rs  mod.rs
apps/api/src/api/system/: cli.rs  client_session.rs  computer.rs  debug_log.rs  diagnostics.rs  files.rs  handlers.rs  mod.rs  skills.rs
apps/api/src/api/terminal_canvas/: handlers.rs  mod.rs
apps/api/src/api/test/: dto.rs  handlers.rs  mod.rs
apps/api/src/api/token_usage/: handlers.rs  mod.rs
apps/api/src/api/usage/: handlers.rs  mod.rs
apps/api/src/api/workspace/: handlers.rs  mod.rs
apps/api/src/api/ws/: agent_handler.rs  automation_events.rs  connection.rs  error.rs  handler.rs  (+7 more)
apps/api/src/config/: mod.rs
apps/api/src/middleware/: mod.rs
apps/api/src/relay/: control_plane_client.rs  external_events.rs  http_gateway.rs  ingest.rs  mod.rs  register.rs  supervisor.rs
apps/api/src/service/: mod.rs
apps/api/src/utils/: mod.rs  wiki_skill_sync.rs
apps/cli/: AGENTS.md  Cargo.toml
apps/cli/src/: api_client.rs  main.rs
apps/cli/src/commands/: canvas.rs  computer.rs  local.rs  mod.rs  review.rs  runtime.rs  update.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.debug.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  logging.rs  main.rs  runtime.rs  state.rs  updater.rs
crates/agent/: AGENTS.md  Cargo.toml  README.md
crates/agent/src/: lib.rs  manager.rs  models.rs
crates/agent/src/acp_client/: client.rs  logging.rs  mod.rs  process.rs  runner.rs  tools.rs  types.rs
crates/agent/src/manager/: binary.rs  keyring.rs  manifest.rs  mod.rs  npm.rs  registry.rs
crates/ai-usage/: AGENTS.md  Cargo.toml
crates/ai-usage/src/: config.rs  constants.rs  lib.rs  models.rs  refresh.rs  runtime.rs  service.rs  tests.rs
crates/ai-usage/src/providers/: amp.rs  antigravity.rs  claude.rs  codex.rs  commandcode.rs  cursor.rs  factory.rs  factory_session.rs  factory_storage.rs  gemini.rs  kimi.rs  mimo.rs  minimax.rs  mod.rs  opencode.rs  zai.rs  zed.rs
crates/ai-usage/src/support/: browser.rs  formatting.rs  mod.rs  system.rs
crates/core-engine/: AGENTS.md  Cargo.toml
crates/core-engine/src/: code_ast.rs  error.rs  lib.rs  search.rs  test_engine.rs
crates/core-engine/src/agent_hooks/: ampcode.rs  claude_code.rs  codex.rs  cursor.rs  factory_droid.rs  gemini.rs  hermes.rs  kiro.rs  mod.rs  opencode.rs  pi.rs
crates/core-engine/src/app/: mod.rs
crates/core-engine/src/fs/: mod.rs
crates/core-engine/src/git/: actions.rs  changes.rs  commits.rs  excludes.rs  mod.rs  patches.rs  refs.rs  tests.rs  types.rs  worktrees.rs
crates/core-engine/src/github/: mod.rs
crates/core-engine/src/pty/: mod.rs
crates/core-engine/src/shims/: bash_shim.sh  fish_shim.fish  mod.rs  zsh_shim_zshenv  zsh_shim_zshrc
crates/core-engine/src/tmux/: capture.rs  control.rs  install.rs  locale.rs  mod.rs  session.rs  types.rs
crates/core-service/: AGENTS.md  Cargo.toml
crates/core-service/src/: error.rs  lib.rs  message_push_service.rs  project_service.rs  terminal_service.rs  types.rs  workspace_service.rs  ws_message_service.rs
crates/core-service/src/service/: agent.rs  agent_hooks.rs  agent_session.rs  canvas.rs  canvas_agent_relay.rs  git_commit_message.rs  message_push.rs  mod.rs  notification.rs  project.rs  project_ast.rs  review.rs  session_title.rs  skill.rs  skill_support.rs  terminal.rs  terminal_canvas.rs  terminal_overview.rs  test.rs  workspace.rs  workspace_gitignore_dirs.rs  workspace_support.rs  workspace_todos.rs  ws_message.rs  ws_message_support.rs
crates/core-service/src/utils/: mod.rs  path_boundary.rs  workspace_name_generator.rs
crates/infra/: AGENTS.md  Cargo.toml
crates/infra/src/: error.rs  lib.rs
crates/infra/src/cache/: mod.rs
crates/infra/src/db/: connection.rs  mod.rs
crates/infra/src/jobs/: mod.rs
crates/infra/src/queue/: mod.rs
crates/infra/src/utils/: atmos_cli.rs  debug_logging.rs  disk_cache.rs  mod.rs  review_artifacts.rs  system_prompt_sync.rs  system_skill_sync.rs
crates/infra/src/websocket/: connection.rs  handler.rs  heartbeat.rs  manager.rs  message.rs  mod.rs  service.rs
crates/llm/: AGENTS.md  Cargo.toml
crates/llm/src/: client.rs  config.rs  error.rs  lib.rs  prompt_template.rs  types.rs
crates/llm/src/providers/: anthropic_compatible.rs  mod.rs  openai_compatible.rs
crates/local-model/: Cargo.toml
crates/local-model/src/: lib.rs
crates/local-model/src/config/: mod.rs
crates/local-model/src/download/: mod.rs
crates/local-model/src/manifest/: mod.rs  types.rs
crates/local-model/src/runtime/: manager.rs  port.rs  process.rs  state.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: installer.rs  lib.rs  manager.rs  registry.rs  transport.rs
crates/remote-access/: Cargo.toml
crates/remote-access/src/: error.rs  gateway.rs  lib.rs  session.rs  types.rs
crates/remote-access/src/providers/: cloudflare.rs  mod.rs  ngrok.rs  tailscale.rs
crates/runtime-manager/: AGENTS.md  Cargo.toml  README.md
crates/runtime-manager/src/: client_session.rs  client_state.rs  computer_client_settings.rs  computer_name.rs  identity.rs  lib.rs  manifest.rs  register.rs  registration_meta.rs  supervisor.rs
crates/runtime-manifest/: Cargo.toml
crates/runtime-manifest/src/: lib.rs  register.rs  server_identity.rs
crates/token-usage/: AGENTS.md  Cargo.toml
crates/token-usage/src/: cursor_sync.rs  lib.rs  models.rs  service.rs  tests.rs
(+1926 files in other folders)
