[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
agent = { path = "../../crates/agent" }
infra = { path = "../../crates/infra" }
core-engine = { path = "../../crates/core-engine" }
core-service = { path = "../../crates/core-service" }

axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
sea-orm-migration = "1.1"
dotenvy = "0.15"
dirs = "5.0"