[package]
name = "atmos"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
chrono = { version = "0.4", features = ["serde", "clock"] }
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { workspace = true }
serde_json = "1.0"
sysinfo = "0.30"
tokio = { workspace = true }
core-service = { path = "../../crates/core-service" }
infra = { path = "../../crates/infra" }
