[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-client-protocol = "0.9"
anyhow = "1.0"
async-trait = "0.1"
dirs = "5.0"
keyring = "3.6.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["process", "sync"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
which = "6.0"
