[package]
name = "ai-usage"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
async-trait = "0.1"
base64 = "0.22"
cbc = "0.1"
dirs = "5.0"
hex = "0.4"
pbkdf2 = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["sync", "time", "macros", "rt"] }
