[package]
name = "core-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = "2.0"
dirs = "5.0"
serde_json = "1.0"
base64 = "0.22"
regex = "1.12.3"
anyhow = "1.0.102"
ignore = "0.4"
num_cpus = "1.16"
serde.workspace = true
