[package]
name = "core-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = "2.0"
dirs = "5.0"
serde_json = "1.0"
base64 = "0.22"
regex = "1.12.3"
ignore = "0.4"
sha2 = "0.10"
tree-sitter = "0.26"
tree-sitter-rust = "0.24.2"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23.5"
serde.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
