[package]
name = "core-service"
version = "0.1.0"
edition = "2021"

[dependencies]
infra = { path = "../infra" }
core-engine = { path = "../core-engine" }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = "2.0"
async-trait = "0.1"
