[package]
name = "core-service"
version = "0.1.0"
edition = "2021"

[dependencies]
infra = { path = "../infra" }
core-engine = { path = "../core-engine" }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = "2.0"
async-trait = "0.1"
serde = "1.0"
serde_json = "1.0"
portable-pty = "0.9.0"
anyhow = "1.0.100"
parking_lot = "0.12.5"
dirs = "5.0"
rand = "0.8"
regex = "1.11.1"

