[package]
name = "llm"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1.0", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
