[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
dirs = "5"
flate2 = "1"
lsp-types = "0.97"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true }
serde_json = "1"
tar = "0.4"
tokio = { workspace = true }
tracing = "0.1"
zip = "2"

[dev-dependencies]
tempfile = "3"
