[package]
name = "token-usage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["sync", "time", "macros", "rt"] }
tokscale-core = { git = "https://github.com/junhoyeo/tokscale", package = "tokscale-core", rev = "dcda94dd999ec4feca10cb97aaee9b4b4fb28b97" }
