[package]
name = "atmos-desktop"
version = "0.2.6"
description = "Atmos desktop app powered by Tauri"
authors = ["atmos"]
edition = "2021"

[lib]
name = "atmos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { workspace = true }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { workspace = true }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dirs = "5"
libc = "0.2"
chrono = { version = "0.4", features = ["serde", "clock"] }
remote-access = { path = "../../../crates/remote-access" }
keyring = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.2"
