[package]
name = "atmos-desktop"
version = "1.2.0-beta.11"
description = "Atmos desktop app powered by Tauri"
authors = ["atmos"]
edition = "2021"

[lib]
name = "atmos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { workspace = true }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dirs = "5"
runtime-manager = { path = "../../../crates/runtime-manager", features = ["supervisor"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tunnel-connector = { path = "../../../crates/tunnel-connector" }
keyring = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
objc2-app-kit = "0.3.2"
